# build-trace

./: .gitignore  CMakeLists.txt  README.md  build.sh
gcc-plugin/: CMakeLists.txt  DBUtil.cpp  DBUtil.h  FileManager.cpp  FileManager.h  Global.cpp  Global.h  Log.cpp  Log.h  Symbol.cpp  Symbol.h  SymbolRefTable.cpp  SymbolRefTable.h  SymbolTable.cpp  SymbolTable.h  main.cpp
hook/: CMakeLists.txt  README.md  db_util.c  db_util.h  log.c  log.h  main.c  symbol.version  trace.c  trace.h  util.c  util.h
